Add more settings